Apply filters when listing SensorThings Observations
This commit updates the SensorThings northbound provider to apply filtering when listing observations. Fixes #628

Signed-off-by: Tim Ward <timothyjward@apache.org>